--- a/profile/index.html
+++ b/profile/index.html
@@ -117,6 +117,9 @@
 
     <section id="vote" class="profile-card panel">
       <h2>Hlasování pro server</h2>
+      <div id="voteBalance" class="wallet-balance">
+  Vote Coin: <strong>0</strong>
+</div>
       <p class="muted">Odkazy na hlasování budou zde (4–5 webů).</p>
 
       <div class="link-list">
@@ -833,9 +836,10 @@ document.addEventListener('click', async (e) => {
       const data = await res.json();
 
       if (data.ok) {
-        alert('Vote Coin připsán!');
-        loadVoteSites();
-      } else if (data.error === 'COOLDOWN') {
+  alert('Vote Coin připsán!');
+  loadVoteSites();
+  loadVoteBalance();
+} else if (data.error === 'COOLDOWN') {
         alert('Vote je v cooldownu.');
       } else {
         alert('Hlasování se nepodařilo.');
@@ -852,6 +856,25 @@ document.addEventListener('click', async (e) => {
 document.addEventListener('DOMContentLoaded', loadVoteSites);
 </script>
 
+<script>
+async function loadVoteBalance() {
+  try {
+    const res = await fetch('/api/get_wallet_balance.php?currency=VOTE_COIN');
+    const data = await res.json();
+    if (!data.ok) return;
+
+    const el = document.querySelector('#voteBalance strong');
+    if (el) {
+      el.textContent = data.balance;
+    }
+
+  } catch (err) {
+    console.error('Vote balance error:', err);
+  }
+}
+
+document.addEventListener('DOMContentLoaded', loadVoteBalance);
+</script>
 
 
 </body>
