--- a/profile/index-en.html
+++ b/profile/index-en.html
@@ -116,13 +116,42 @@
       <h2>Server vote</h2>
       <div id="voteBalance" class="wallet-balance">
   Vote Coin: <strong>0</strong>
-</div>
+      </div>
+      <div id="dcBalance" class="wallet-balance">
+  Dragon Coin: <strong>0</strong>
+      </div>
       <p class="muted">Vote links will appear here (4–5 sites).</p>
 
       <div class="link-list">
   <div class="muted">Loading votes…</div>
 </div>
+<hr style="margin:20px 0;">
 
+<button id="openVipModal" class="btn btn-primary">
+  Activate VIP 24h
+</button>
+
+<div id="vipModal" class="modal hidden">
+  <div class="modal-box">
+    <h3>Activate VIP 24 Hours</h3>
+
+    <label>Character</label>
+    <select id="vipCharSelect"></select>
+
+    <label>Currency</label>
+    <select id="vipCurrency">
+      <option value="VOTE_COIN">4 Vote Coin</option>
+      <option value="DC">1 Dragon Coin</option>
+    </select>
+
+    <div class="modal-actions">
+      <button id="vipCancel" class="btn">Cancel</button>
+      <button id="vipConfirm" class="btn btn-primary">
+        Activate
+      </button>
+    </div>
+  </div>
+</div>
     </section>
 
     <section id="donate" class="profile-card panel">
@@ -855,7 +884,85 @@ async function loadVoteBalance() {
   }
 }
 
-document.addEventListener('DOMContentLoaded', loadVoteBalance);
+async function loadDcBalance() {
+  try {
+    const res = await fetch('/api/get_wallet_balance.php?currency=DC');
+    const data = await res.json();
+    if (!data.ok) return;
+
+    const el = document.querySelector('#dcBalance strong');
+    if (el) {
+      el.textContent = data.balance;
+    }
+
+  } catch (err) {
+    console.error('DC balance error:', err);
+  }
+}
+
+/* 🔄 načtení obou při startu stránky */
+document.addEventListener('DOMContentLoaded', () => {
+  loadVoteBalance();
+  loadDcBalance();
+});
+</script>
+
+<script>
+async function loadAllCharactersForVip() {
+  const select = document.getElementById('vipCharSelect');
+  select.innerHTML = '';
+
+  const resAcc = await fetch('/api/list_game_accounts.php');
+  const dataAcc = await resAcc.json();
+  if (!dataAcc.ok) return;
+
+  for (const acc of dataAcc.accounts) {
+    const resChar = await fetch(`/api/list_characters.php?account=${encodeURIComponent(acc.login)}`);
+    const dataChar = await resChar.json();
+    if (!dataChar.ok) continue;
+
+    dataChar.characters.forEach(ch => {
+      const opt = document.createElement('option');
+      opt.value = ch.charId;
+      opt.textContent = `${ch.char_name} (Lv ${ch.level})`;
+      select.appendChild(opt);
+    });
+  }
+}
+
+document.getElementById('openVipModal')?.addEventListener('click', async () => {
+  await loadAllCharactersForVip();
+  document.getElementById('vipModal').classList.remove('hidden');
+});
+
+document.getElementById('vipCancel')?.addEventListener('click', () => {
+  document.getElementById('vipModal').classList.add('hidden');
+});
+
+document.getElementById('vipConfirm')?.addEventListener('click', async () => {
+  const charId = document.getElementById('vipCharSelect').value;
+  const currency = document.getElementById('vipCurrency').value;
+
+  const res = await fetch('/api/activate_vip_24h.php', {
+    method: 'POST',
+    headers: {'Content-Type':'application/json'},
+    body: JSON.stringify({
+      char_id: charId,
+      currency: currency
+    })
+  });
+
+  const data = await res.json();
+
+  if (data.ok) {
+    alert('VIP Activated!');
+    document.getElementById('vipModal').classList.add('hidden');
+    loadVoteBalance();
+    loadDcBalance();
+  } else {
+    alert('Activation failed.');
+  }
+});
 </script>
 
 
