--- a/profile/index-en.html
+++ b/profile/index-en.html
@@ -126,7 +126,9 @@
   <div class="muted">Loading votes…</div>
 </div>
 <hr style="margin:20px 0;">
-
+<button id="convertVcToDc" class="btn">
+    Convert 4 Vote Coin → 1 Dragon Coin
+  </button>
 <button id="openVipModal" class="btn btn-primary">
   Activate VIP 24h
 </button>
