--- a/profile/index.html
+++ b/profile/index.html
@@ -129,7 +129,7 @@
   <div class="muted">Načítám hlasování…</div>
 </div>
   <hr style="margin:20px 0;">
-  <button id="convertVcToDc" class="btn">
+  <button id="convertVcToDc" class="btn btn-primary">
     Převod 4 Vote Coin → 1 Dragon Coin
   </button>
 <button id="openVipModal" class="btn btn-primary">
