--- a/admin/index.html
+++ b/admin/index.html
@@ -50,7 +50,11 @@ fetch('/api/me.php')
       <p>Aktuálně přihlášení hráči</p>
       <a href="/admin/online_players.html" class="btn btn-primary">Otevřít</a>
     </div>
-
+<div class="admin-card">
+      <h3>Ekonomika</h3>
+      <p>Pro úpravu měny</p>
+      <a href="/admin/economy.html" class="btn btn-primary">Otevřít</a>
+    </div>
   <div class="admin-card">
       <h3>Přehled WEB - GAME - CHARACTERS</h3>
       <p>Správa VIP účtů </p>
