--- a/admin/bug_detail.html
+++ b/admin/bug_detail.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Bug detail | Admin</title>
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/admin.css">
 </head>
 
 <body class="auth-page profile-page admin-content">
