--- a/admin/bug_reports.html
+++ b/admin/bug_reports.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Admin – Bug reports</title>
-  <link rel="stylesheet" href="/css/style.css">
+    
+    <link rel="stylesheet" href="/css/admin.css">
 
   <style>
     /* ===== STATUS BADGES (ADMIN LIST) ===== */
