--- a/admin/vip.html
+++ b/admin/vip.html
@@ -5,9 +5,10 @@
     <title>Admin – VIP správa</title>
 
     <!-- tvé existující CSS -->
-    <link rel="stylesheet" href="/admin/css/admin.css">
+    
+    <link rel="stylesheet" href="/css/admin.css">
 
-    <!-- JS -->
+     <!-- JS -->
     <script src="/api/js/api.js" defer></script>
     <script src="/admin/js/vip_admin.js" defer></script>
 
