--- a/admin/index.html
+++ b/admin/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Admin panel | Ordo Draconis</title>
-  <link rel="stylesheet" href="/css/style.css">
+    
+    <link rel="stylesheet" href="/css/admin.css">
 </head>
 
 <body class="auth-page profile-page admin-content">
