--- a/admin/online_players.html
+++ b/admin/online_players.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Admin – Online players</title>
-  <link rel="stylesheet" href="/css/style.css">
+    
+    <link rel="stylesheet" href="/css/admin.css">
 
   <style>
     .online-badge {
