--- a/admin/users.html
+++ b/admin/users.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Admin – Uživatelé</title>
-<link rel="stylesheet" href="/css/style.css">
+  
+    <link rel="stylesheet" href="/css/admin.css">
 
    <script src="/api/js/api.js" defer></script>
   <script src="/admin/js/users_admin.js" defer></script>
